--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 ipywebrtc==0.6.0
+matplotlib==3.2.2
+notebook==5.3.1
+pandas==1.3.5
 pytorch-lightning==1.6.1
 torch @ https://download.pytorch.org/whl/cu111/torch-1.10.0%2Bcu111-cp37-cp37m-linux_x86_64.whl
 torchaudio @ https://download.pytorch.org/whl/cu111/torchaudio-0.10.0%2Bcu111-cp37-cp37m-linux_x86_64.whl
